Kubernetes/file/customer-kubernetes-file.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: customer
    namespace: prod
    labels:
        app: customer
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: customer
            version: v1
    template:
        metadata:
            annotations:
                prometheus.io/path: /actuator/prometheus
                prometheus.io/scrape: "true"
                prometheus.io/port: "8081"
            labels:
                app: customer
                version: v1
        spec:
          containers:
          - name: customer
            image: sunday/customer
            imagePullPolicy: Never
            resources:
              requests:
                memory: 200Mi
              limits:
                memory: 1Gi
            livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8081
              initialDelaySeconds: 300
              periodSeconds: 5
              timeoutSeconds: 60
            readinessProbe:
              httpGet:
                path: /actuator/health/readiness
                port: 8081
              timeoutSeconds: 60
              initialDelaySeconds: 300
            volumeMounts:
            - mountPath: /usr/java/openjdk-18/lib/security
              name: copy
          volumes:
          - name: cacerts
            emptyDir: {}
          - name: copy
            emptyDir: {}
          - name: tls
            secret:
              secretName: keycloak-tls

---
apiVersion: v1
kind: Service
metadata:
    name: customer
    namespace: prod
    labels:
        app: customer
spec:
    type: LoadBalancer
    ports:
        - name: http-web
          port: 80
          targetPort: 8081
          appProtocol: http
    selector:
        app: customer
        version: v1
