Kubernetes/file/employee-kubernetes-file.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: employee
    namespace: prod
    labels:
        app: employee
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: employee
            version: v1
    template:
        metadata:
            annotations:
                prometheus.io/path: /actuator/prometheus
                prometheus.io/scrape: "true"
                prometheus.io/port: "8082"
            labels:
                app: employee
                version: v1
        spec:
          containers:
          - name: employee
            image: sunday/employee
            imagePullPolicy: Never
            volumeMounts:
            - mountPath: /usr/java/openjdk-18/lib/security
              name: copy
          volumes:
          - name: cacerts
            emptyDir: {}
          - name: copy
            emptyDir: {}
          - name: tls
            secret:
              secretName: keycloak-tls

---
apiVersion: v1
kind: Service
metadata:
    name: employee
    namespace: prod
    labels:
        app: employee
spec:
    type: LoadBalancer
    ports:
        - port: 80
          targetPort: 8082         
    selector:
        app: employee
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: employee
  namespace: prod
spec:
  hosts:
  - employee.prod.svc.cluster.local
  gateways:
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: employee.prod.svc.cluster.local
