Kubernetes/file/loan-kubernetes-file.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: loan
    namespace: prod
    labels:
        app: loan
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: loan
            version: v1
    template:
        metadata:
            annotations:
                prometheus.io/path: /actuator/prometheus
                prometheus.io/scrape: "true"
                prometheus.io/port: "8083"        
            labels:
                app: loan
                version: v1
        spec:
          containers:
          - name: loan
            image: sunday/loan
            imagePullPolicy: Never
            resources:
              requests:
                memory: 200Mi
              limits:
                memory: 1Gi
            livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8083
              timeoutSeconds: 60
              initialDelaySeconds: 300
              periodSeconds: 5
            readinessProbe:
              httpGet:
                path: /actuator/health/readiness
                port: 8083
              timeoutSeconds: 60
              initialDelaySeconds: 300
            volumeMounts:
            - mountPath: /usr/java/openjdk-18/lib/security
              name: copy
          volumes:
          - name: cacerts
            emptyDir: {}
          - name: copy
            emptyDir: {}
          - name: tls
            secret:
              secretName: keycloak-tls

---
apiVersion: v1
kind: Service
metadata:
    name: loan
    namespace: prod
    labels:
        app: loan
spec:
    type: LoadBalancer
    ports:
        - name: http-web
          port: 80
          targetPort: 8083
          appProtocol: http
    selector:
        app: loan
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: loan
  namespace: prod
spec:
  hosts:
  - loan.prod.svc.cluster.local
  gateways:
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: loan.prod.svc.cluster.local
