Kubernetes/file/spring-cloud-config-kubernetes-file.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: cloud-config
    namespace: prod
    labels:
        app: cloud-config
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: cloud-config
            version: v1

    template:
        metadata:
            labels:
                app: cloud-config
                version: v1
        spec:
          containers:
          - name: cloud-config
            image: sunday/cloud-config
            imagePullPolicy: Never
            resources:
              requests:
                memory: 50Mi
              limits:
                memory: 500Mi
            livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8888
              initialDelaySeconds: 300
              periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8888

---
apiVersion: v1
kind: Service
metadata:
    name: cloud-config
    namespace: prod
    labels:
        app: cloud-config
        version: v1
spec:
    type: LoadBalancer
    ports:
        - name: http
          port: 8888
          targetPort: 8888
    selector:
        app: cloud-config
        version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloud-config
  namespace: prod
spec:
  hosts:
  - cloud-config.prod.svc.cluster.local
  gateways:
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 8888
        host: cloud-config.prod.svc.cluster.local
    retries:
      attempts: 3
      perTryTimeout: 10s
      retryOn: connect-failure,refused-stream,unavailable,cancelled,resource-exhausted,retriable-status-codes
