Kubernetes/file/transaction-kubernetes-file.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: transaction
    namespace: prod    
    labels:
        app: transaction
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: transaction
            version: v1
    template:
        metadata:
            annotations:
                prometheus.io/path: /actuator/prometheus
                prometheus.io/scrape: "true"
                prometheus.io/port: "8084"        
            labels:
                app: transaction
                version: v1
        spec:
          serviceAccountName: transaction        
          containers:
          - name: transaction
            image: sunday/transaction
            imagePullPolicy: Never
            ports:
            - containerPort: 8084            
            resources:
              requests:
                memory: 200Mi
              limits:
                memory: 1Gi
            livenessProbe:
              httpGet:
                path: /actuator/health/liveness
                port: 8084
              timeoutSeconds: 60
              initialDelaySeconds: 300
              periodSeconds: 5
            readinessProbe:
              httpGet:
                path: /actuator/health/readiness
                port: 8084
              timeoutSeconds: 60
              initialDelaySeconds: 300
            volumeMounts:
            - mountPath: /usr/java/openjdk-18/lib/security
              name: copy
          volumes:
          - name: cacerts
            emptyDir: {}
          - name: copy
            emptyDir: {}
          - name: tls
            secret:
              secretName: keycloak-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: transaction
    service: transaction
  name: transaction
  namespace: prod
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8084
    appProtocol: http
  selector:
    app: transaction
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transaction
  namespace: prod
spec:
  hosts:
  - transaction.prod.svc.cluster.local
  gateways:
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: transaction.prod.svc.cluster.local
